Fixed popover z-index

--- a/src/scss/vars/_vars.scss
+++ b/src/scss/vars/_vars.scss
@@ -190,5 +190,5 @@ $fixed-z-index: 1030 !default;
 $offcanvas-z-index: 1040 !default;
 $modal-backdrop-z-index: 1050 !default;
 $modal-z-index: 1060 !default;
-$popover-z-index: 10760 !default;
+$popover-z-index: 1070 !default;
 $tooltip-z-index: 1080 !default;
